--- a/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "[205 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,6 +1168,88 @@
     "\n",
     "dfi.export(change_smote_model_comparison_df, '../../../../Output/Modelling/' + classifier_name + '/Tables/' + 'change_smote_model_comparison_df.png')\n",
     "#change_smote_model_comparison_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Change Model Classification Report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                         precision    recall  f1-score   support\n",
+      "\n",
+      "Downgrade Since Last Fixed Quarter Date     0.0156    0.1000    0.0270        20\n",
+      "        Same As Last Fixed Quarter Date     0.9590    0.7458    0.8391      1066\n",
+      "  Upgrade Since Last Fixed Quarter Date     0.0248    0.1250    0.0415        32\n",
+      "\n",
+      "                               accuracy                         0.7165      1118\n",
+      "                              macro avg     0.3332    0.3236    0.3025      1118\n",
+      "                           weighted avg     0.9154    0.7165    0.8017      1118\n",
+      "\n",
+      "                                         0       6       7       8     9\n",
+      "0  Downgrade Since Last Fixed Quarter Date  0.0156  0.1000  0.0270    20\n",
+      "1          Same As Last Fixed Quarter Date  0.9590  0.7458  0.8391  1066\n",
+      "2    Upgrade Since Last Fixed Quarter Date  0.0248  0.1250  0.0415    32\n",
+      "      Change Precision  Recall F1-Score Support\n",
+      "0  Downgrade    0.0156  0.1000   0.0270      20\n",
+      "1       Same    0.9590  0.7458   0.8391   1,066\n",
+      "2    Upgrade    0.0248  0.1250   0.0415      32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load classificiation report from pickle\n",
+    "classification_report = pd.read_pickle('../../../../Output/Modelling/' + classifier_name + '/smote_rating_change_model_3/smote_rating_change_model_3_classification_report.pkl')\n",
+    "print(classification_report)\n",
+    "\n",
+    "# Convert classification report string to dataframe\n",
+    "classification_report_lines = classification_report.split('\\n')\n",
+    "# split on spaces within and drop blanks\n",
+    "classification_report_data = [line.split() for line in classification_report_lines if line]\n",
+    "# drop lists begining with 'precision', 'accuracy', 'macro', 'weighted'\n",
+    "classification_report_data = [line for line in classification_report_data if line[0] not in ['precision', 'accuracy', 'macro', 'weighted']]\n",
+    "# Stack list of rows into dataframe\n",
+    "classification_report_data = pd.DataFrame(classification_report_data)\n",
+    "# Merge columns 0 to 5 into one column on spaces\n",
+    "classification_report_data[0] = classification_report_data[[0, 1, 2, 3, 4, 5]].apply(lambda x: ' '.join(x), axis=1)\n",
+    "# Drop columns 1 to 4\n",
+    "classification_report_data = classification_report_data.drop(columns=[1, 2, 3, 4, 5])\n",
+    "print(classification_report_data)\n",
+    "# Set columns to \"Change\", \"Precision\", \"Recall\", \"F1-Score\", \"Support\"\n",
+    "classification_report_data.columns = ['Change', 'Precision', 'Recall', 'F1-Score', 'Support']\n",
+    "# Recode change: 'Downgrade Since Last Fixed Quarter Date' as 'Downgrade', 'Same As Last Fixed Quarter Date' as 'Same', 'Upgrade Since Last Fixed Quarter Date' as 'Upgrade'\n",
+    "change_mapping = {'Downgrade Since Last Fixed Quarter Date': 'Downgrade', 'Same As Last Fixed Quarter Date': 'Same', 'Upgrade Since Last Fixed Quarter Date': 'Upgrade'}\n",
+    "classification_report_data['Change'] = classification_report_data['Change'].map(change_mapping)\n",
+    "# Sort by Change in correct order: Downgrade, Same, Upgrade\n",
+    "rating_map = {'Downgrade': 0, 'Same': 1, 'Upgrade': 2}\n",
+    "classification_report_data['Change Num'] = classification_report_data['Change'].map(rating_map)\n",
+    "classification_report_data = classification_report_data.sort_values(by='Change Num').drop(columns='Change Num')\n",
+    "# Add commas in Support\n",
+    "classification_report_data['Support'] = classification_report_data['Support'].apply(lambda x: '{:,}'.format(int(x)))\n",
+    "print(classification_report_data)\n",
+    "\n",
+    "# Export to Excel\n",
+    "classification_report_data.to_excel('../../../../Output/Modelling/' + classifier_name + '/Tables/SMOTE_Most_Complex_Model_Classification_Report.xlsx', index=False)\n",
+    "\n",
+    "# Export to LaTeX\n",
+    "# Format columns\n",
+    "for col in classification_report_data.columns:\n",
+    "    classification_report_data[col] = classification_report_data[col].apply(lambda x: f'{x:.2f}' if isinstance(x, float) else x)\n",
+    "# Center all columns\n",
+    "lt_string = classification_report_data.to_latex(index=False, column_format='c' * 5, escape=False)\n",
+    "latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "with open('../../../../Output/Modelling/' + classifier_name + '/Tables/SMOTE_Most_Complex_Model_Classification_Report.tex', 'w') as f:\n",
+    "    f.write(latex_with_font_size)"
    ]
   }
  ],
