--- a/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
@@ -1199,6 +1199,88 @@
     "dfi.export(change_smote_model_comparison_df, '../../../../Output/Modelling/' + classifier_name + '/Tables/' + 'change_smote_model_comparison_df.png')\n",
     "#change_smote_model_comparison_df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Change Model Classification Report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                         precision    recall  f1-score   support\n",
+      "\n",
+      "Downgrade Since Last Fixed Quarter Date     0.0000    0.0000    0.0000        20\n",
+      "        Same As Last Fixed Quarter Date     0.9533    0.9953    0.9738      1066\n",
+      "  Upgrade Since Last Fixed Quarter Date     0.0000    0.0000    0.0000        32\n",
+      "\n",
+      "                               accuracy                         0.9490      1118\n",
+      "                              macro avg     0.3178    0.3318    0.3246      1118\n",
+      "                           weighted avg     0.9089    0.9490    0.9285      1118\n",
+      "\n",
+      "                                         0       6       7       8     9\n",
+      "0  Downgrade Since Last Fixed Quarter Date  0.0000  0.0000  0.0000    20\n",
+      "1          Same As Last Fixed Quarter Date  0.9533  0.9953  0.9738  1066\n",
+      "2    Upgrade Since Last Fixed Quarter Date  0.0000  0.0000  0.0000    32\n",
+      "      Change Precision  Recall F1-Score Support\n",
+      "0  Downgrade    0.0000  0.0000   0.0000      20\n",
+      "1       Same    0.9533  0.9953   0.9738   1,066\n",
+      "2    Upgrade    0.0000  0.0000   0.0000      32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load classificiation report from pickle\n",
+    "classification_report = pd.read_pickle('../../../../Output/Modelling/' + classifier_name + '/smote_rating_change_model_3/smote_rating_change_model_3_classification_report.pkl')\n",
+    "print(classification_report)\n",
+    "\n",
+    "# Convert classification report string to dataframe\n",
+    "classification_report_lines = classification_report.split('\\n')\n",
+    "# split on spaces within and drop blanks\n",
+    "classification_report_data = [line.split() for line in classification_report_lines if line]\n",
+    "# drop lists begining with 'precision', 'accuracy', 'macro', 'weighted'\n",
+    "classification_report_data = [line for line in classification_report_data if line[0] not in ['precision', 'accuracy', 'macro', 'weighted']]\n",
+    "# Stack list of rows into dataframe\n",
+    "classification_report_data = pd.DataFrame(classification_report_data)\n",
+    "# Merge columns 0 to 5 into one column on spaces\n",
+    "classification_report_data[0] = classification_report_data[[0, 1, 2, 3, 4, 5]].apply(lambda x: ' '.join(x), axis=1)\n",
+    "# Drop columns 1 to 4\n",
+    "classification_report_data = classification_report_data.drop(columns=[1, 2, 3, 4, 5])\n",
+    "print(classification_report_data)\n",
+    "# Set columns to \"Change\", \"Precision\", \"Recall\", \"F1-Score\", \"Support\"\n",
+    "classification_report_data.columns = ['Change', 'Precision', 'Recall', 'F1-Score', 'Support']\n",
+    "# Recode change: 'Downgrade Since Last Fixed Quarter Date' as 'Downgrade', 'Same As Last Fixed Quarter Date' as 'Same', 'Upgrade Since Last Fixed Quarter Date' as 'Upgrade'\n",
+    "change_mapping = {'Downgrade Since Last Fixed Quarter Date': 'Downgrade', 'Same As Last Fixed Quarter Date': 'Same', 'Upgrade Since Last Fixed Quarter Date': 'Upgrade'}\n",
+    "classification_report_data['Change'] = classification_report_data['Change'].map(change_mapping)\n",
+    "# Sort by Change in correct order: Downgrade, Same, Upgrade\n",
+    "rating_map = {'Downgrade': 0, 'Same': 1, 'Upgrade': 2}\n",
+    "classification_report_data['Change Num'] = classification_report_data['Change'].map(rating_map)\n",
+    "classification_report_data = classification_report_data.sort_values(by='Change Num').drop(columns='Change Num')\n",
+    "# Add commas in Support\n",
+    "classification_report_data['Support'] = classification_report_data['Support'].apply(lambda x: '{:,}'.format(int(x)))\n",
+    "print(classification_report_data)\n",
+    "\n",
+    "# Export to Excel\n",
+    "classification_report_data.to_excel('../../../../Output/Modelling/' + classifier_name + '/Tables/SMOTE_Most_Complex_Model_Classification_Report.xlsx', index=False)\n",
+    "\n",
+    "# Export to LaTeX\n",
+    "# Format columns\n",
+    "for col in classification_report_data.columns:\n",
+    "    classification_report_data[col] = classification_report_data[col].apply(lambda x: f'{x:.2f}' if isinstance(x, float) else x)\n",
+    "# Center all columns\n",
+    "lt_string = classification_report_data.to_latex(index=False, column_format='c' * 5, escape=False)\n",
+    "latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "with open('../../../../Output/Modelling/' + classifier_name + '/Tables/SMOTE_Most_Complex_Model_Classification_Report.tex', 'w') as f:\n",
+    "    f.write(latex_with_font_size)"
+   ]
   }
  ],
  "metadata": {
