decrease font size

--- a/Output/Modelling/p_values_table.tex
+++ b/Output/Modelling/p_values_table.tex
@@ -1,4 +1,4 @@
-\footnotesize
+\tiny
 \begin{tabular}{ccccc}
 \toprule
 Model A & Model B & p, Non-Exact & p, Non-Exact, Continuity Corrected & p, Exact \\
