--- a/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
+++ b/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1094,144 +1094,144 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Logistic - Include Previous Rating Model 2</td>\n",
-       "      <td>Logistic - Include Previous Rating Model 3</td>\n",
+       "      <td>Logistic - Include Previous Rating - Fin Only</td>\n",
+       "      <td>Logistic - Include Previous Rating - Fin + NLP</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Logistic - Exclude Previous Rating Model 2</td>\n",
-       "      <td>Logistic - Exclude Previous Rating Model 3</td>\n",
+       "      <td>Logistic - Exclude Previous Rating - Fin Only</td>\n",
+       "      <td>Logistic - Exclude Previous Rating - Fin + NLP</td>\n",
        "      <td>0.31</td>\n",
        "      <td>0.35</td>\n",
        "      <td>0.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Logistic - SMOTE Rating Change Model 2</td>\n",
-       "      <td>Logistic - SMOTE Rating Change Model 3</td>\n",
+       "      <td>Logistic - SMOTE Rating Change - Fin Only</td>\n",
+       "      <td>Logistic - SMOTE Rating Change - Fin + NLP</td>\n",
        "      <td>0.17</td>\n",
        "      <td>0.19</td>\n",
        "      <td>0.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>XGBoost - Include Previous Rating Model 2</td>\n",
-       "      <td>XGBoost - Include Previous Rating Model 3</td>\n",
+       "      <td>XGBoost - Include Previous Rating - Fin Only</td>\n",
+       "      <td>XGBoost - Include Previous Rating - Fin + NLP</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>XGBoost - Exclude Previous Rating Model 2</td>\n",
-       "      <td>XGBoost - Exclude Previous Rating Model 3</td>\n",
+       "      <td>XGBoost - Exclude Previous Rating - Fin Only</td>\n",
+       "      <td>XGBoost - Exclude Previous Rating - Fin + NLP</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>XGBoost - SMOTE Rating Change Model 2</td>\n",
-       "      <td>XGBoost - SMOTE Rating Change Model 3</td>\n",
+       "      <td>XGBoost - SMOTE Rating Change - Fin Only</td>\n",
+       "      <td>XGBoost - SMOTE Rating Change - Fin + NLP</td>\n",
        "      <td>0.06</td>\n",
        "      <td>0.11</td>\n",
        "      <td>0.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>GNN - Transductive - Model 2</td>\n",
-       "      <td>GNN - Transductive - Model 3</td>\n",
+       "      <td>GNN - Transductive - Fin Only</td>\n",
+       "      <td>GNN - Transductive - Fin + NLP</td>\n",
        "      <td>0.17</td>\n",
        "      <td>0.21</td>\n",
        "      <td>0.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>GNN - Inductive - Model 2</td>\n",
-       "      <td>GNN - Inductive - Model 3</td>\n",
+       "      <td>GNN - Inductive - Fin Only</td>\n",
+       "      <td>GNN - Inductive - Fin + NLP</td>\n",
        "      <td>0.1</td>\n",
        "      <td>0.12</td>\n",
        "      <td>0.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>GNN - Transductive - Model 2</td>\n",
-       "      <td>GNN - Inductive - Model 2</td>\n",
+       "      <td>GNN - Transductive - Fin Only</td>\n",
+       "      <td>GNN - Inductive - Fin Only</td>\n",
        "      <td>0.83</td>\n",
        "      <td>0.92</td>\n",
        "      <td>0.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>GNN - Transductive - Model 3</td>\n",
-       "      <td>GNN - Inductive - Model 3</td>\n",
+       "      <td>GNN - Transductive - Fin + NLP</td>\n",
+       "      <td>GNN - Inductive - Fin + NLP</td>\n",
        "      <td>0.48</td>\n",
        "      <td>0.55</td>\n",
        "      <td>0.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>GNN - Inductive - Model 3</td>\n",
-       "      <td>Logistic Regression - Retrain on GNN Data</td>\n",
+       "      <td>GNN - Inductive - Fin + NLP</td>\n",
+       "      <td>Logistic Regression - Retrain on GNN Data - Fi...</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>GNN - Inductive - Model 3</td>\n",
-       "      <td>XGBoost - Retrain on GNN Data</td>\n",
+       "      <td>GNN - Inductive - Fin + NLP</td>\n",
+       "      <td>XGBoost - Retrain on GNN Data - Fin + NLP</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>GNN - Transductive - Model 3</td>\n",
-       "      <td>Logistic Regression - Retrain on GNN Data</td>\n",
+       "      <td>GNN - Transductive - Fin + NLP</td>\n",
+       "      <td>Logistic Regression - Retrain on GNN Data - Fi...</td>\n",
        "      <td>0.03</td>\n",
        "      <td>0.03</td>\n",
        "      <td>0.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>GNN - Transductive - Model 3</td>\n",
-       "      <td>XGBoost - Retrain on GNN Data</td>\n",
+       "      <td>GNN - Transductive - Fin + NLP</td>\n",
+       "      <td>XGBoost - Retrain on GNN Data - Fin + NLP</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>GNN - Inductive - Model 3</td>\n",
-       "      <td>Logistic Regression - Pretrained on GNN Data</td>\n",
+       "      <td>GNN - Inductive - Fin + NLP</td>\n",
+       "      <td>Logistic Regression - Pretrained, on GNN Data ...</td>\n",
        "      <td>0.03</td>\n",
        "      <td>0.04</td>\n",
        "      <td>0.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>GNN - Inductive - Model 3</td>\n",
-       "      <td>XGBoost - Pretrained on GNN Data</td>\n",
+       "      <td>GNN - Inductive - Fin + NLP</td>\n",
+       "      <td>XGBoost - Pretrained, on GNN Data - Fin + NLP</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>GNN - Transductive - Model 3</td>\n",
-       "      <td>Logistic Regression - Pretrained on GNN Data</td>\n",
+       "      <td>GNN - Transductive - Fin + NLP</td>\n",
+       "      <td>Logistic Regression - Pretrained, on GNN Data ...</td>\n",
        "      <td>0.08</td>\n",
        "      <td>0.09</td>\n",
        "      <td>0.09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>GNN - Transductive - Model 3</td>\n",
-       "      <td>XGBoost - Pretrained on GNN Data</td>\n",
+       "      <td>GNN - Transductive - Fin + NLP</td>\n",
+       "      <td>XGBoost - Pretrained, on GNN Data - Fin + NLP</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1241,45 +1241,45 @@
        "</div>"
       ],
       "text/plain": [
-       "                                       Model A  \\\n",
-       "0   Logistic - Include Previous Rating Model 2   \n",
-       "1   Logistic - Exclude Previous Rating Model 2   \n",
-       "2       Logistic - SMOTE Rating Change Model 2   \n",
-       "3    XGBoost - Include Previous Rating Model 2   \n",
-       "4    XGBoost - Exclude Previous Rating Model 2   \n",
-       "5        XGBoost - SMOTE Rating Change Model 2   \n",
-       "6                 GNN - Transductive - Model 2   \n",
-       "7                    GNN - Inductive - Model 2   \n",
-       "8                 GNN - Transductive - Model 2   \n",
-       "9                 GNN - Transductive - Model 3   \n",
-       "10                   GNN - Inductive - Model 3   \n",
-       "11                   GNN - Inductive - Model 3   \n",
-       "12                GNN - Transductive - Model 3   \n",
-       "13                GNN - Transductive - Model 3   \n",
-       "14                   GNN - Inductive - Model 3   \n",
-       "15                   GNN - Inductive - Model 3   \n",
-       "16                GNN - Transductive - Model 3   \n",
-       "17                GNN - Transductive - Model 3   \n",
+       "                                          Model A  \\\n",
+       "0   Logistic - Include Previous Rating - Fin Only   \n",
+       "1   Logistic - Exclude Previous Rating - Fin Only   \n",
+       "2       Logistic - SMOTE Rating Change - Fin Only   \n",
+       "3    XGBoost - Include Previous Rating - Fin Only   \n",
+       "4    XGBoost - Exclude Previous Rating - Fin Only   \n",
+       "5        XGBoost - SMOTE Rating Change - Fin Only   \n",
+       "6                   GNN - Transductive - Fin Only   \n",
+       "7                      GNN - Inductive - Fin Only   \n",
+       "8                   GNN - Transductive - Fin Only   \n",
+       "9                  GNN - Transductive - Fin + NLP   \n",
+       "10                    GNN - Inductive - Fin + NLP   \n",
+       "11                    GNN - Inductive - Fin + NLP   \n",
+       "12                 GNN - Transductive - Fin + NLP   \n",
+       "13                 GNN - Transductive - Fin + NLP   \n",
+       "14                    GNN - Inductive - Fin + NLP   \n",
+       "15                    GNN - Inductive - Fin + NLP   \n",
+       "16                 GNN - Transductive - Fin + NLP   \n",
+       "17                 GNN - Transductive - Fin + NLP   \n",
        "\n",
-       "                                         Model B p, Non-Exact  \\\n",
-       "0     Logistic - Include Previous Rating Model 3            -   \n",
-       "1     Logistic - Exclude Previous Rating Model 3         0.31   \n",
-       "2         Logistic - SMOTE Rating Change Model 3         0.17   \n",
-       "3      XGBoost - Include Previous Rating Model 3            -   \n",
-       "4      XGBoost - Exclude Previous Rating Model 3          0.0   \n",
-       "5          XGBoost - SMOTE Rating Change Model 3         0.06   \n",
-       "6                   GNN - Transductive - Model 3         0.17   \n",
-       "7                      GNN - Inductive - Model 3          0.1   \n",
-       "8                      GNN - Inductive - Model 2         0.83   \n",
-       "9                      GNN - Inductive - Model 3         0.48   \n",
-       "10     Logistic Regression - Retrain on GNN Data         0.01   \n",
-       "11                 XGBoost - Retrain on GNN Data          0.0   \n",
-       "12     Logistic Regression - Retrain on GNN Data         0.03   \n",
-       "13                 XGBoost - Retrain on GNN Data          0.0   \n",
-       "14  Logistic Regression - Pretrained on GNN Data         0.03   \n",
-       "15              XGBoost - Pretrained on GNN Data          0.0   \n",
-       "16  Logistic Regression - Pretrained on GNN Data         0.08   \n",
-       "17              XGBoost - Pretrained on GNN Data          0.0   \n",
+       "                                              Model B p, Non-Exact  \\\n",
+       "0      Logistic - Include Previous Rating - Fin + NLP            -   \n",
+       "1      Logistic - Exclude Previous Rating - Fin + NLP         0.31   \n",
+       "2          Logistic - SMOTE Rating Change - Fin + NLP         0.17   \n",
+       "3       XGBoost - Include Previous Rating - Fin + NLP            -   \n",
+       "4       XGBoost - Exclude Previous Rating - Fin + NLP          0.0   \n",
+       "5           XGBoost - SMOTE Rating Change - Fin + NLP         0.06   \n",
+       "6                      GNN - Transductive - Fin + NLP         0.17   \n",
+       "7                         GNN - Inductive - Fin + NLP          0.1   \n",
+       "8                          GNN - Inductive - Fin Only         0.83   \n",
+       "9                         GNN - Inductive - Fin + NLP         0.48   \n",
+       "10  Logistic Regression - Retrain on GNN Data - Fi...         0.01   \n",
+       "11          XGBoost - Retrain on GNN Data - Fin + NLP          0.0   \n",
+       "12  Logistic Regression - Retrain on GNN Data - Fi...         0.03   \n",
+       "13          XGBoost - Retrain on GNN Data - Fin + NLP          0.0   \n",
+       "14  Logistic Regression - Pretrained, on GNN Data ...         0.03   \n",
+       "15      XGBoost - Pretrained, on GNN Data - Fin + NLP          0.0   \n",
+       "16  Logistic Regression - Pretrained, on GNN Data ...         0.08   \n",
+       "17      XGBoost - Pretrained, on GNN Data - Fin + NLP          0.0   \n",
        "\n",
        "   p, Non-Exact, Continuity Corrected p, Exact  \n",
        "0                                   -        -  \n",
@@ -1302,7 +1302,7 @@
        "17                                0.0      0.0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,6 +1321,25 @@
     "# Convert all columns to strings and replace NaN with '-'\n",
     "p_values_table = p_values_table.astype(str)\n",
     "p_values_table = p_values_table.replace('nan', '-')\n",
+    "\n",
+    "# In Model A and Model B, replace ' Model 2' with 'Fin Only'\n",
+    "p_values_table['Model A'] = p_values_table['Model A'].str.replace(' Model 2', ' Fin Only')\n",
+    "p_values_table['Model B'] = p_values_table['Model B'].str.replace(' Model 2', ' Fin Only')\n",
+    "# In Model A and Model B, replace ' Model 3' with 'Fin + NLP'\n",
+    "p_values_table['Model A'] = p_values_table['Model A'].str.replace(' Model 3', ' Fin + NLP')\n",
+    "p_values_table['Model B'] = p_values_table['Model B'].str.replace(' Model 3', ' Fin + NLP')\n",
+    "# Repalce 'Rating Fin' with 'Rating - Fin'\n",
+    "p_values_table['Model A'] = p_values_table['Model A'].str.replace('Rating Fin', 'Rating - Fin')\n",
+    "p_values_table['Model B'] = p_values_table['Model B'].str.replace('Rating Fin', 'Rating - Fin')\n",
+    "# Replace 'Change Fin' with 'Change - Fin'\n",
+    "p_values_table['Model A'] = p_values_table['Model A'].str.replace('Change Fin', 'Change - Fin')\n",
+    "p_values_table['Model B'] = p_values_table['Model B'].str.replace('Change Fin', 'Change - Fin')\n",
+    "# Replace 'on GNN Data' with 'on GNN Data - Fin + NLP'\n",
+    "p_values_table['Model A'] = p_values_table['Model A'].str.replace('on GNN Data', 'on GNN Data - Fin + NLP')\n",
+    "p_values_table['Model B'] = p_values_table['Model B'].str.replace('on GNN Data', 'on GNN Data - Fin + NLP')\n",
+    "# Repalce 'Pretrained on' with 'Pretrained, on'\n",
+    "p_values_table['Model A'] = p_values_table['Model A'].str.replace('Pretrained on', 'Pretrained, on')\n",
+    "p_values_table['Model B'] = p_values_table['Model B'].str.replace('Pretrained on', 'Pretrained, on')\n",
     "\n",
     "# Export to LaTeX\n",
     "# Center all columns\n",
