--- a/Code/Modelling/Random Guess Model/random_guess.ipynb
+++ b/Code/Modelling/Random Guess Model/random_guess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,14 +53,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "accuracy\n",
       "0.22450805008944544\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_14776\\2656859936.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  pred_df['pred'] = pred\n"
      ]
     }
    ],
@@ -68,13 +81,18 @@
     "# Rating model\n",
     "pred = naive_classifier(traindata.Rating)\n",
     "accuracy = sum(pred == testdata.Rating)/test_size\n",
-    "stattotex(round(accuracy, 4), 'ratingRGAcc', '../../../Output/Modelling/random_guess.tex')\n",
+    "stattotex(round(accuracy, 4), 'ratingRGAcc', '../../../Output/Modelling/Random Guess/random_guess.tex')\n",
+    "# Save predictions\n",
+    "pred_df = testdata[['ticker', 'fixed_quarter_date', 'Rating']]\n",
+    "pred_df['pred'] = pred\n",
+    "pred_df.to_excel('../../../Data/Predictions/Random Guess/Rating_RG_Preds.xlsx', index=False)\n",
+    "print('accuracy')\n",
     "print(accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -96,12 +114,13 @@
     "cm_display.plot(cmap='Blues', ax=plt.gca(), xticks_rotation='vertical')\n",
     "plt.xlabel('Predicted Label')\n",
     "plt.ylabel('True Label')\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "plt.savefig('../../../Output/Modelling/Random Guess/Rating_RG_CM.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -110,19 +129,35 @@
      "text": [
       "0.8980322003577818\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_14776\\1835441550.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  pred_df['pred'] = pred\n"
+     ]
     }
    ],
    "source": [
     "# Change model\n",
     "pred = naive_classifier(traindata[\"Change Direction Since Last Fixed Quarter Date\"])\n",
     "accuracy = sum(pred == testdata[\"Change Direction Since Last Fixed Quarter Date\"])/test_size\n",
-    "stattotex(round(accuracy, 4), 'changeRGAcc', '../../../Output/Modelling/random_guess.tex')\n",
+    "stattotex(round(accuracy, 4), 'changeRGAcc', '../../../Output/Modelling/Random Guess/random_guess.tex')\n",
+    "# Save predictions\n",
+    "pred_df = testdata[['ticker', 'fixed_quarter_date', 'Change Direction Since Last Fixed Quarter Date']]\n",
+    "pred_df['pred'] = pred\n",
+    "pred_df.to_excel('../../../Data/Predictions/Random Guess/Change_RG_Preds.xlsx', index=False)\n",
     "print(accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +180,8 @@
     "cm_display.plot(cmap='Blues', ax=plt.gca(), xticks_rotation='vertical')\n",
     "plt.xlabel('Predicted Label')\n",
     "plt.ylabel('True Label')\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "plt.savefig('../../../Output/Modelling/Random Guess/Change_RG_CM.png')"
    ]
   }
  ],
